--- a/UL-Thesis-latex/bibliography.bib
+++ b/UL-Thesis-latex/bibliography.bib
@@ -72,3 +72,11 @@
     year    = {2024},
     urldate = {2024-11}
 }
+
+@inproceedings{elsner2008you,
+  title={You talking to me? a corpus and algorithm for conversation disentanglement},
+  author={Elsner, Micha and Charniak, Eugene},
+  booktitle={Proceedings of the 46th Annual Meeting of the Association for Computational Linguistics on Human Language Technologies},
+  pages={834--842},
+  year={2008}
+}
