--- a/UL-Thesis-latex/main.tex
+++ b/UL-Thesis-latex/main.tex
@@ -112,8 +112,8 @@
     \input{chapters/solucao-proposta}
     \input{chapters/testes-e-validacao}
     \input{chapters/metodo-e-planeamento}
-    %\input{chapters/resultados}
-    %\input{chapters/conclusao}
+    \input{chapters/resultados}
+    \input{chapters/conclusao}
     
     % Appendices
     \appendix
