--- a/UL-Thesis-latex/cover.tex
+++ b/UL-Thesis-latex/cover.tex
@@ -13,7 +13,7 @@
 
     \vspace{1\baselineskip}
     {\fontsize{14}{1.15}\selectfont
-        Relatório Intercalar 1º Semestre
+        Relatório Final - 3ª Entrega
     }
 
     \vspace{5.5cm}
