--- a/UL-Thesis-latex/main.tex
+++ b/UL-Thesis-latex/main.tex
@@ -27,6 +27,8 @@
 \usepackage{graphicx}   % Para incluir imagens
 % \usepackage[round]{natbib}  % Remove or comment out this line
 \usepackage{pdflscape}
+\usepackage{longtable}  % Para tabelas longas que podem quebrar páginas
+\usepackage{adjustbox}  % Para redimensionar tabelas
 
 
 % home background settings
